fix: restore menu navbar on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,7 +34,6 @@
   --ifm-navbar-height: 5.5rem;
   --ifm-menu-color-background-active: #fff1f3;
   --ifm-menu-color-active: #000000;
-  --ifm-navbar-link-color: #777777;
   --search-local-highlight-color: var(--ifm-color-primary-darker);
   --ifm-breadcrumb-item-background-active: none;
   --ifm-breadcrumb-color-active: #777777;
